2007-09-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp (Separate): More defensive programming to prevent
	crashing with incomplete OBChiralData.

	* src/formats/cansmilesformat.cpp: Add support for new OBPairData
	"canonical order" -- space terminated string of canonical atom
	labels.

	* configure, Makefile.in, *: Rebuild from latest libtool,
	autotools, etc.

2007-09-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp: Small improvements to LineSearch and
	ConjugateGradientsTakeNSteps for performance improvement. In
	particular, reset the CG direction periodically and only print
	output every 10 steps.

	* src/forcefields/forcefieldghemical.cpp: Smarter VDW calculation
	-- minimize the number of multiplies. Not much of an improvement,
	unfortunately.

2007-09-02  Jean Brefort  <jean.brefort@normalesup.org>

	* configure.in: applied patch from Klaus Heinz fixes #1786288.

2007-07-13  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Renamed index operator to __getitem__. I
	didn't do this for the other programming languages as I have no idea
	whether this is a valid name, or whether there is an equivalent 'magic
	attribute name' in other languages

2007-07-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/math/vector3.h, include/openbabel/base.h,
	include/openbabel/generic.h, include/openbabel/residue.h: Fix GCC
	compiler warnings with -pedantic. Thanks to Carsten Neihaus.

2007-07-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/Makefile.am, src/Makefile.in: Bump library version for 2.1.1
	release.

2007-07-05  Chris Morley

	* src/formats/inchiformat(WriteMolecule): downgraded the InChI
	message "Tetrahedral stereo info not available" to obInfo, 
	since it arises from the workings of the the opaque OB chirality
	system. Also added the molecule number for identification.
	
	* src/GUI/OBGUI.cpp, tool/babel.cpp: added &std::cout to the